# ml-inference-api-fastapi

./: .gitignore  CLAUDE.MD  README.md  main.py  pyproject.toml
.claude/: settings.local.json
01_what_is_api/: FastAPI_Mastery_Interactive_Guide.html  The Modern API Handbook.html
02_fastapi_setup/: first_app.py  guide.htm  guide.md  run_server.md
03_http_methods/: crud_api.py  guide.html  guide.md  run_server.md
04_path_query_params/: guide.md  path_query_api.py  run_server.md
05_post_requests/: guide.md  post_requests_api.py
06_put_delete_requests/: guide.md  put_delete_requests_api.py
07_serving_llm_models/: .env.example  guide.md  llm_health_api.py  prompts.py  schema.py  utils.py
07_serving_llm_models/frontend/: index.html  script.js  style.css
Data/: patients.json
