[project]
name = "fastapi-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "jsonpatch>=1.33",
    "langchain>=1.2.15",
    "langchain-core>=1.2.27",
    "langchain-openai>=1.1.12",
    "langsmith>=0.7.26",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.43.0",
]
